--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-# archive folder and tagged files
-*archive*
-
+# private working folder that doesn't get pushed to repo:
+*_private_working_folder*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
