--- a/.github/workflows/summary_csv.yml
+++ b/.github/workflows/summary_csv.yml
@@ -8,10 +8,10 @@ on:
   # also runs nightly as a cron job
   # push:
   #   branches: [ main ]
-  # pull_request:
-  #   branches: [ main ]
-  schedule:
-    - cron: '0 1 * * *' # this needs to run **AFTER** the validation action runs.
+  pull_request:
+    branches: [ main ]
+  # schedule:
+  #   - cron: '0 1 * * *' # this needs to run **AFTER** the validation action runs.
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
