--- a/.github/workflows/validate_problem_instance_files.yml
+++ b/.github/workflows/validate_problem_instance_files.yml
@@ -6,10 +6,10 @@ on:
   # also runs nightly as a cron job
   # push:
   #   branches: [ main ]
-  # pull_request:
-  #   branches: [ main ]
-  schedule:
-    - cron: '0 0 * * *'
+  pull_request:
+    branches: [ main ]
+  # schedule:
+  #  - cron: '0 0 * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
