--- a/.github/workflows/validate_problem_instance_files.yml
+++ b/.github/workflows/validate_problem_instance_files.yml
@@ -4,8 +4,8 @@ name: validate_problem_instance_json
 on:
   # Triggers the workflow on push or pull request events for main branch
   # also runs nightly as a cron job
-  # push:
-  #   branches: [ main ]
+  push:
+    branches: [ main ]
   pull_request:
     branches: [ main ]
   # schedule:
