work in progress

--- a/BubbleML/miniML/miniML_config.json
+++ b/BubbleML/miniML/miniML_config.json
@@ -1,6 +1,5 @@
 {
-    "Filename": "Data/Metrics_with_target.csv",
-    "Features": [
+    "features": [
         "max_vertex_degree",
         "min_vertex_degree",
         "mean_vertex_degree",
@@ -18,6 +17,5 @@
         "n_orbs",
         "df_spectral_gap"
     ],
-    "Target": "ccsdt",
-    "Threshold For Confidence of Solvability": 0.75
+    "threshold_for_confidence_of_solvability": 0.75
 }
