--- a/scripts/lre_config.json
+++ b/scripts/lre_config.json
@@ -1,6 +1,6 @@
 {
   "solver_uuid": "c60803ef-14a4-4423-9ebe-31b643d8e42b",
-  "algorith_parameters": {
+  "algorithm_parameters": {
     "square_overlap": 0.8,
     "df_threshold": 1e-3
   },
