Adding max orbitals

--- a/scripts/LRE_config.json
+++ b/scripts/LRE_config.json
@@ -2,7 +2,8 @@
   "solver_uuid": "c60803ef-14a4-4423-9ebe-31b643d8e42b",
   "algorithm_parameters": {
     "square_overlap": 0.8,
-    "df_threshold": 1e-3
+    "df_threshold": 1e-3,
+    "max_orbitals": 32
   },
   "contact_info": [
     {
