--- a/scripts/LRE_config.json
+++ b/scripts/LRE_config.json
@@ -5,6 +5,7 @@
     "df_threshold": 1e-3,
     "max_orbitals": 32
   },
+  "algorithm_description": "Double factorized QPE resource estimates based on methodology of arXiv:2406.06335. Note that the truncation error is not included in the error bounds and that the SCF compute time is not included in the preprocessing time. Also note that unlike arXiv:2406.06335, the ground-state overlaps are not computed from DMRG but instead set to a nominal value.",
   "contact_info": [
     {
       "name": "Max Radin",
