working except for miniML

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # private working folder that doesn't get pushed to repo:
 *_private_working_folder*
+*.vscode*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
