--- a/BubbleML/miniML/miniML_config.json
+++ b/BubbleML/miniML/miniML_config.json
@@ -15,7 +15,7 @@
         "log_fci_dim",
         "n_elec",
         "n_orbs",
-        "df_spectral_gap"
+        "df_gap"
     ],
     "threshold_for_confidence_of_solvability": 0.75
 }
