Initial implementation of physical resource estimates

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ python_requires = >=3.8
 
 install_requires =
     pyLIQTR>=1.2.0
+    qualtran==0.2.0
     pyscf
     openfermion
     openfermionpyscf
