--- a/scripts/PRE_config.json
+++ b/scripts/PRE_config.json
@@ -2,9 +2,10 @@
   "solver_uuid": "5dad4064-cd11-412f-85cb-d722afe3b3de",
   "quantum_hardware_parameters": {
     "num_factories": 4,
-    "physical_error_rate": 1e-4
+    "physical_error_rate": 1e-4,
+    "cycle_time_microseconds": 1
   },
-  "quantum_hardware_description": "foo",
+  "quantum_hardware_description": "Optimistic superconducting hardware model based on that described in https://arxiv.org/abs/2011.03494.",
   "contact_info": [
     {
       "name": "Max Radin",
