--- a/scripts/LRE_config.json
+++ b/scripts/LRE_config.json
@@ -2,6 +2,7 @@
   "solver_uuid": "c60803ef-14a4-4423-9ebe-31b643d8e42b",
   "algorithm_parameters": {
     "overlap": 0.8,
+    "sf_threshold": 1e-8,
     "df_threshold": 1e-3,
     "max_orbitals": 32
   },
