--- a/.github/workflows/summary_csv.yml
+++ b/.github/workflows/summary_csv.yml
@@ -8,8 +8,8 @@ on:
   # also runs nightly as a cron job
   # push:
   #   branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  # pull_request:
+  #   branches: [ main ]
   # schedule:
   #   - cron: '0 1 * * *' # this needs to run **AFTER** the validation action runs.
 
