--- a/setup.cfg
+++ b/setup.cfg
@@ -3,10 +3,10 @@ name = qb-gsee-benchmark
 description = "DARPA QB GSEE Benchmark"
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8
-url = https://github.com/zapatacomputing/qb-gsee-benchmark
-author = Zapata Computing Inc.
-author_email = info@zapatacomputing.com,
-license = <INSERT LICENSE APPROPRIATE LICENSE HERE>
+url = https://github.com/isi-usc-edu/qb-gsee-benchmark
+author = DARPA Quantum Benchmarking Program
+author_email = bobqat@l3harris.com,
+license = Apache-2.0
 license_file = LICENSE
 classifiers =
     Programming Language :: Python :: 3
