--- a/scripts/prepare_standard_report_config.json
+++ b/scripts/prepare_standard_report_config.json
@@ -3,5 +3,6 @@
     "hamiltonian_features_file":"Hamiltonian_features.csv",
     "performance_metrics_directory":"../performance_metrics",
     "problem_instances_directory":"../problem_instances",
-    "solution_files_directory":"../solution_files"
+    "solution_files_directory":"../solution_files",
+    "ml_artifacts_directory":"./ml_artifacts"
 }
