--- a/scripts/prepare_standard_report_config.json
+++ b/scripts/prepare_standard_report_config.json
@@ -2,7 +2,7 @@
     "aggregated_solver_labels_file":"aggregated_solver_labels.csv",
     "hamiltonian_features_file":"Hamiltonian_features.csv",
     "performance_metrics_directory":"../performance_metrics",
-    "problem_instances_directory":"../problem_instances",
+    "problem_instances_directory":"../data/problem_instances",
     "solution_files_directory":"../solution_files",
     "ml_artifacts_directory":"./ml_artifacts"
 }
