--- a/scripts/prepare_standard_report_config.json
+++ b/scripts/prepare_standard_report_config.json
@@ -4,5 +4,6 @@
     "performance_metrics_directory":"../performance_metrics",
     "problem_instances_directory":"../problem_instances",
     "solution_files_directory":"../solution_files",
-    "ml_artifacts_directory":"./ml_artifacts"
+    "ml_artifacts_directory":"./ml_artifacts",
+    "utility_data_csv":"GSEE-HC_utility_estimates_all_instances_task_uuids_v2.csv"
 }
