--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ install_requires =
     pandas
     scikit-learn
     shap
-    jsonschema
+    check-jsonschema
     openpyxl
     markdown
     weasyprint
