--- a/setup.cfg
+++ b/setup.cfg
@@ -24,8 +24,9 @@ packages = find_namespace:
 python_requires = >=3.8
 
 install_requires =
-    pyLIQTR>=1.2.0
-    qualtran==0.2.0
+    attrs>=23.2.0 # See https://github.com/quantumlib/Qualtran/issues/1520
+    pyLIQTR>=1.3.0
+    qualtran==0.4.0
     pyscf
     openfermion
     openfermionpyscf
