--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ python_requires = >=3.8
 
 install_requires =
     attrs>=23.2.0 # See https://github.com/quantumlib/Qualtran/issues/1520
-    pyLIQTR>=1.3.0
+    pyLIQTR>=1.3.0,<1.3.5 # See https://github.com/isi-usc-edu/pyLIQTR/issues/42
     qualtran==0.4.0
     pyscf
     openfermion
