Making LRE config schema

--- a/scripts/LRE_config_overlaps.json
+++ b/scripts/LRE_config_overlaps.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://github.com/isi-usc-edu/qb-gsee-benchmark/raw/refs/heads/main/scripts/LRE_config_schema.json",
   "solver_uuid": "f2d73e1f-3058-43c4-a634-b6c267c84ff1",
   "algorithm_parameters": {
     "overlap_csv": "overlaps.csv",
