--- a/scripts/LRE_config.json
+++ b/scripts/LRE_config.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://github.com/isi-usc-edu/qb-gsee-benchmark/raw/refs/heads/main/scripts/LRE_config_schema.json",
   "solver_uuid": "c60803ef-14a4-4423-9ebe-31b643d8e42b",
   "algorithm_parameters": {
     "overlap": 0.8,
