Adding support for shot parallelization

--- a/scripts/PRE_config_0.0001_0.1us.json
+++ b/scripts/PRE_config_0.0001_0.1us.json
@@ -3,7 +3,8 @@
   "quantum_hardware_parameters": {
     "num_factories": 4,
     "physical_error_rate": 1e-4,
-    "cycle_time_microseconds": 0.1
+    "cycle_time_microseconds": 0.1,
+    "parallelize_shots": false
   },
   "quantum_hardware_description": "Ultra-optimistic hardware model based on the superconducting architecture described in https://arxiv.org/abs/2011.03494.",
   "contact_info": [
