--- a/scripts/PRE_config_0.000001_1us.json
+++ b/scripts/PRE_config_0.000001_1us.json
@@ -3,7 +3,8 @@
   "quantum_hardware_parameters": {
     "num_factories": 4,
     "physical_error_rate": 1e-6,
-    "cycle_time_microseconds": 1
+    "cycle_time_microseconds": 1,
+    "parallelize_shots": false
   },
   "quantum_hardware_description": "Superconducting hardware model based on that described in https://arxiv.org/abs/2011.03494 with an extremely optimistic physical error rate.",
   "contact_info": [
