--- a/scripts/PRE_config_0.0001_1us_parallel.json
+++ b/scripts/PRE_config_0.0001_1us_parallel.json
@@ -4,7 +4,7 @@
     "num_factories": 4,
     "physical_error_rate": 1e-4,
     "cycle_time_microseconds": 1,
-    "parallelize_shots": false
+    "parallelize_shots": true
   },
   "quantum_hardware_description": "Optimistic superconducting hardware model based on that described in https://arxiv.org/abs/2011.03494.",
   "contact_info": [
