--- a/scripts/PRE_config_0.0001_1us_parallel.json
+++ b/scripts/PRE_config_0.0001_1us_parallel.json
@@ -6,7 +6,7 @@
     "cycle_time_microseconds": 1,
     "parallelize_shots": true
   },
-  "quantum_hardware_description": "Optimistic superconducting hardware model based on that described in https://arxiv.org/abs/2011.03494.",
+  "quantum_hardware_description": "Optimistic superconducting hardware model based on that described in https://arxiv.org/abs/2011.03494. Assumes that enough QPUs are available to run all shots in parallel.",
   "contact_info": [
     {
       "name": "Max Radin",
