now creating solver similarity matrix plots and solver PCA similarity plots

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # private working folder that doesn't get pushed to repo:
 *_private_working_folder*
+
 *.vscode*
+.DS_Store
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
